2009-07-16 John Wu <John.Wu at ACM.org>
	* src/query.cpp: doEvaluate and doScan handled the LOGICAL_AND
	operator incorrectly, when no hit is found, it neglected to set
	the result bitvector, which causes other expressions to produce
	incorrect answers (apparently, this is the root cuase of the
	problem reported by Jochen Schlosser)
	* tests/scripts/query-count.list: add empty conditions to exercise
	the changes in query.cpp
	* src/qExpr.h, src/qExpr.cpp: change print function to only print
	one node, rename old print function (that recursively prints the
	whole express tree) to printFull, removed qExpr::printRange
	* src/category.cpp: call prepareMembers in category::selectUInts
	(without it, the program ibis occasionally crashes)
	* src/array_t.cpp: check for k being 0 in topk and bottomk,
	initialize the array ind before calling qsort in topk and bottomk
	(the zero value of k causes crashes in bottomk)
	* src/bundles.cpp: in versions of truncate, make sure keep > 0

2009-07-14 John Wu <John.Wu at ACM.org>
	* src/mensa.cpp: in doSelect limit the number of characters from
	cond is placed in de (to reduce the length of the new table)
	* src/column.cpp: two versions of function selectValuesT
	negelected to close fdes
	* src/bord.h: ibis::bord::cursor::dumpIJ needs to cast char and
	unsigned char to integers before printing to ensure they are
	printed as integers

2009-07-10 John Wu <John.Wu at ACM.org>
	* src/mensa.cpp, src/bord.cpp: change group by operation involving
	categorical values to use the integer representation instead of
	the strings (should be faster than using strings)
	* tests/Makefile.am: add test case to check-text to exercise group
	by on categorical values
	* src/bundle.cpp: add statements to check for nil pointers

2009-07-09 John Wu <John.Wu at ACM.org>
	* src/category.h, src/category.cpp: clean up the documentation
	about members of ibis::dictionary and consolidate the null strings
	into a single class variable ibis::dictionary::nullstring.